ajout d'une application flask

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,17 +6,17 @@
 		<title>Quizz</title>
 		<link rel="stylesheet" type="text/css" href="css/main.css"/>
 		<link rel="icon" type="image/png" href="img/icon.png"/>
-		<script type="text/javascript" src="fonctionJS.js"></script>
+		<script type="text/javascript" src="src/js/fonctions.js"></script>
 	</head>
 
 	<body>
 		<div id="content">
 			<p>Bonjour, bienvenue sur notre site de quizz.</p>
 			<p><em>Pour pouvoir <mark>jouer</mark> il faut être <strong>inscrit</strong> !</em></p>
-			<form method="POST" action="inscription.html">
+			<form method="POST" action="register">
 				<button>S'inscrire</button>
 			</form>
-			<form method="POST" action="authentification.html">
+			<form method="POST" action="login">
 				<button>Se connecter</button>
 			</form>
 		</div>
