--- a/templates/login.html
+++ b/templates/login.html
@@ -6,13 +6,13 @@
 		<title>Se connecter</title>
 		<link rel="stylesheet" type="text/css" href="css/main.css"/>
 		<link rel="icon" type="image/png" href="img/icon.png"/>
-		<script type="text/javascript" src="fonctionJS.js"></script>
+		<script type="text/javascript" src="src/js/fonctions.js"></script>
 	</head>
 
 	<body>
 	
 		<div id="content">
-			<form id="formulaire" onsubmit="return false" method="POST" action="authentification.py">
+			<form id="formulaire" onsubmit="return false" method="POST" action="">
 				<label>Login:</label>
 				<br>
 				<input id="login" type="text" name="login" placeholder="Mettez votre identifiant" onkeydown="border()" required>
@@ -24,7 +24,7 @@
 				<button onclick="verifier()">Se connecter</button>
 			</form>
 			<div id="redirection">
-				<p>Toujours pas inscrit ? <a href="inscription.html">Inscrivez-vous !</a></p>
+				<p>Toujours pas inscrit ? <a href="register.html">Inscrivez-vous !</a></p>
 			</div>
 		</div>
 	</body>
