--- a/templates/login.html
+++ b/templates/login.html
@@ -1,31 +1,20 @@
-<!DOCTYPE html>
-
-<html>
-	<head>
-		<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-		<title>Se connecter</title>
-		<link rel="stylesheet" type="text/css" href="css/main.css"/>
-		<link rel="icon" type="image/png" href="img/icon.png"/>
-		<script type="text/javascript" src="src/js/fonctions.js"></script>
-	</head>
-
-	<body>
-	
-		<div id="content">
-			<form id="formulaire" onsubmit="return false" method="POST" action="">
-				<label>Login:</label>
-				<br>
-				<input id="login" type="text" name="login" placeholder="Mettez votre identifiant" onkeydown="border()" required>
-				<br><br>
-				<label>Mot de passe:</label>
-				<br>
-				<input id="mdp" type="password" name="mdp" placeholder="Mettez votre mot de passe" onkeydown="border2()" required>
-				<br>
-				<button onclick="verifier()">Se connecter</button>
-			</form>
-			<div id="redirection">
-				<p>Toujours pas inscrit ? <a href="register.html">Inscrivez-vous !</a></p>
-			</div>
-		</div>
-	</body>
-</html>
+<div id="content">
+    <h1>Connexion</h1>
+    <p>{{msg}}</p>
+    <form id="formulaire" onsubmit="return false" method="POST" action="">
+        <label>Username:</label>
+        <br>
+        <input id="username" type="text" name="username" placeholder="Mettez votre username" onkeydown="border()"
+               required>
+        <br><br>
+        <label>Mot de passe:</label>
+        <br>
+        <input id="mdp" type="password" name="mdp" placeholder="Mettez votre mot de passe" onkeydown="border2()"
+               required>
+        <br>
+        <button onclick="verifier()">Se connecter</button>
+    </form>
+    <div id="redirection">
+        <p>Toujours pas inscrit ? <a href="/register">Inscrivez-vous !</a></p>
+    </div>
+</div>
