--- a/templates/register.html
+++ b/templates/register.html
@@ -1,31 +1,17 @@
-<!DOCTYPE html>
-
-<html>
-	<head>
-		<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-		<title>S'inscrire</title>
-		<link rel="stylesheet" type="text/css" href="css/main.css"/>
-		<link rel="icon" type="image/png" href="img/icon.png"/>
-		<script type="text/javascript" src="src/js/fonctions.js"></script>
-	</head>
-
-	<body>
-		<div id="content">
-			<form id="formulaire" onsubmit="return false" method="POST" action="../inscription.py">
-				<label>Login:</label>
-				<br>
-				<input id="login" type="text" name="login" placeholder="Mettez un identifiant" onkeydown="border()" required>
-				<br><br>
-				<label>Mot de passe:</label>
-				<br>
-				<input id="mdp" type="password" name="mdp" placeholder="Mettez un mot de passe" onkeydown="border2()" required>
-				<br>
-				<button onclick="verifier()">S'inscrire</button>
-			</form>
-			<div id="redirection">
-				<p>Déjà inscrit ? <a href="login.html">Connectez-vous !</a></p>
-			</div>
-		</div>
-		
-	</body>
-</html>
+<div id="content">
+    <h1>Inscription</h1>
+    <form id="formulaire" onsubmit="return false" method="POST" action="">
+        <label>Username:</label>
+        <br>
+        <input id="username" type="text" name="username" placeholder="Mettez un username" onkeydown="border()" required>
+        <br><br>
+        <label>Mot de passe:</label>
+        <br>
+        <input id="mdp" type="password" name="mdp" placeholder="Mettez un mot de passe" onkeydown="border2()" required>
+        <br>
+        <button onclick="verifier()">S'inscrire</button>
+    </form>
+    <div id="redirection">
+        <p>Déjà inscrit ? <a href="/login">Connectez-vous !</a></p>
+    </div>
+</div>
