--- a/templates/head.html
+++ b/templates/head.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 
 <html>
-	<head>
-		<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-		<title>{{title}}</title>
-		<link rel="stylesheet" type="text/css" href="css/main.css"/>
-		<link rel="icon" type="image/png" href="img/icon.png"/>
-		<script type="text/javascript" src="src/js/fonctions.js"></script>
-	</head>
+    <head>
+        <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
+        <title>{{ title }}</title>
+        <link rel="stylesheet" type="text/css" href="css/main.css"/>
+        <link rel="icon" type="image/png" href="img/icon.png"/>
+        <script type="text/javascript" src="src/js/fonctions.js"></script>
+    </head>
 
-	<body>
-	</body>
+    <body>
+        <header>
+            <h1><a href="/">Accueil</a></h1>
+            <nav>
+                <ul>
+                    <li><a href="/quizz">Jouer</a></li>
+                    <li><a href="/profil">Profil</a></li>
+                </ul>
+            </nav>
+        </header>
+    </body>
 </html>
