--- a/templates/home.html
+++ b/templates/home.html
@@ -2,11 +2,7 @@
     <p>Bonjour, bienvenue sur notre site de quizz.</p>
     <p><em>Pour pouvoir
         <mark>jouer</mark>
-        il faut être <strong>inscrit</strong> !</em></p>
-    <form method="POST" action="register">
-        <button>S'inscrire</button>
-    </form>
-    <form method="POST" action="login">
-        <button>Se connecter</button>
-    </form>
+        il faut être <strong>inscrit</strong> !</em></p><br>
+    <a class="button" href="register">S'inscrire</a>
+    <a class="button" href="login">Se connecter</a>
 </div>
