--- a/templates/loged.html
+++ b/templates/loged.html
@@ -2,12 +2,10 @@
     <p>Felicitation {{user}} ! Vous êtes connecte sur notre site ! Vous pouvez commencer a jouer ou ajouter de nouvelles
         questions
         au quizz !</p>
-    <form method="POST" action="/jeu">
-        <input type="hidden" name="login" value="{}"/>
+    <form method="POST" action="/quizz">
         <button>Commencer</button>
     </form>
     <form method="POST" action="/add-question">
-        <input type="hidden" name="login" value="{}">
         <button>Proposer une nouvelle question</button>
     </form>
 </div>
