--- a/templates/register.html
+++ b/templates/register.html
@@ -1,5 +1,6 @@
 <div id="content">
-    <h1>Inscription</h1>
+    <h2>Inscription</h2>
+    <p>{{msg}}</p>
     <form id="formulaire" onsubmit="return false" method="POST" action="">
         <label>Username:</label>
         <br>
