--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,4 @@
-<div id="content">
+<div id="log">
     <p>Bonjour, bienvenue sur notre site de quizz.</p>
     <p><em>Pour pouvoir
         <mark>jouer</mark>
