--- a/templates/loged.html
+++ b/templates/loged.html
@@ -5,7 +5,5 @@
     <form method="POST" action="/quizz">
         <button>Commencer</button>
     </form>
-    <form method="POST" action="/add-question">
-        <button>Proposer une nouvelle question</button>
-    </form>
+    <a class="button" href="/add-question">Proposer une nouvelle question</a>
 </div>
