ajout de la deconnexion #1

--- a/templates/added.html
+++ b/templates/added.html
@@ -1,4 +1,4 @@
-<div id="quizz">
+<div id="content">
     <p>Félicitation {{ user }} ! Votre question est maintenant ajoutée à notre Quizz ! Vous pouvez en proposer une autre
         ou
         commencer une nouvelle partie !</p>
