--- a/css/main.css
+++ b/css/main.css
@@ -124,6 +124,7 @@ button, .button {
     font-size: 15px;
     font-family: "Comic Sans MS", cursive, sans-serif;
     text-decoration: none;
+    display: inline-block;
 }
 
 button:hover, .button:hover {
