ajout de la suppression de compte #1

--- a/templates/profil.html
+++ b/templates/profil.html
@@ -4,4 +4,7 @@
     <form action="/profil" method="POST">
         <button type="submit" name="submit" value="submit">Déconnexion</button>
     </form>
+    <form action="/delete" method="POST">
+        <button type="submit" name="submit" value="submit">Supprimer le compte</button>
+    </form>
 </div>
