refactor: enhance code readability

--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -6,7 +6,7 @@
         <title>{{ title }}</title>
         <link rel="stylesheet" type="text/css" href="css/main.css"/>
         <link rel="icon" type="image/png" href="img/icon.png"/>
-        <script type="text/javascript" src="src/js/fonctions.js"></script>
+        <script type="text/javascript" src="js/fonctions.js"></script>
     </head>
 
     <body>
